[gd_scene load_steps=5 format=3 uid="uid://dmcrboumpymth"]

[ext_resource type="Script" path="res://Scripts/spider.gd" id="1_2cmbd"]
[ext_resource type="Texture2D" uid="uid://d1cjigehh3wkq" path="res://Sprites/Generic_enemies/Screenshot 2024-11-28 151301.png" id="1_klph3"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_x0xg8"]
radius = 38.0
height = 102.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8k2u7"]
radius = 35.0
height = 104.0

[node name="Spider" type="CharacterBody2D" groups=["Enemy"]]
collision_mask = 7
script = ExtResource("1_2cmbd")

[node name="Flip" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Flip"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_klph3")

[node name="PoisonSpawner" type="Node2D" parent="Flip"]
position = Vector2(-69, 0)

[node name="FloorDetector" type="RayCast2D" parent="Flip"]
position = Vector2(-61, 0)
target_position = Vector2(0, 60)
collision_mask = 6

[node name="ObsticleDetector" type="RayCast2D" parent="Flip"]
position = Vector2(-19, -22)
target_position = Vector2(-60, 0)
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, 3)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_x0xg8")

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Rebound" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rebound"]
position = Vector2(1, -2)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_8k2u7")

[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="body_entered" from="Rebound" to="." method="_on_rebound_body_entered"]
